Default display location, updated docs

--- a/secret-santa.html
+++ b/secret-santa.html
@@ -145,8 +145,15 @@
 
             // Print all matches in target identifier
             function printMatches(target) {
-                var r = document.getElementById(target);
-                r.innerHTML = ''; // Clear existing content
+
+                var r = document.getElementById(target);          
+                if (!r) {
+                    r = document.body; // Write to body when no DOM object is given
+                }
+                else {
+                    r.innerHTML = ''; // Clear existing content
+                }
+                
                 if (matches.length == people.length) {
                     for (var i = 0; i < matches.length; i++) {
                         var from = matches[i].getFrom();
